# cup

./: AstNode.cpp  AstNode.h  CMakeLists.txt  CodeGenerate.cpp  CodeGenerate.h  Parser.cpp  Parser.h  PrintVisitor.h  README.md  main.cpp  makefile  mycode
doc/: bnf  plan.readme
src/: AstNode.cpp  AstNode.h  CodeGenerate.cpp  CodeGenerate.h  Common.cpp  Common.h  Diag.cpp  Diag.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  PreProcessing.cpp  PreProcessing.h  PrintVisitor.cpp  PrintVisitor.h  README.md  Scope.cpp  Scope.h  Type.cpp  Type.h  TypeVisitor.cpp  TypeVisitor.h  driver.c  macro.cpp  macro.h  main.cpp
test/: arith.c  array.c  assert.c  cast.c  const.c  copy.s  float.c  func.c  func_return.c  function.c  head.h  incr.c  initializer.c  main.c  num.c  pointer.c  sizeof.c  struct.c  struct1.c  test1.c  testCodes.c  testFunc.c  variable.c
